[gd_scene load_steps=5 format=3 uid="uid://dercwquryae2g"]

[ext_resource type="Script" path="res://project_elements/task/task.gd" id="1_e0rqx"]
[ext_resource type="Theme" uid="uid://leiuhrufh5o8" path="res://theme/theme.tres" id="2_jvgun"]
[ext_resource type="Script" path="res://common/text_focus.gd" id="3_pdtx7"]
[ext_resource type="Texture2D" uid="uid://dgmvsxmm31bo7" path="res://addons/images/kenney_icons/cross.png" id="4_3wct2"]

[node name="Task" type="HBoxContainer" groups=["Persist", "Task"]]
offset_right = 261.0
offset_bottom = 50.0
size_flags_horizontal = 3
focus_mode = 2
theme_override_constants/separation = 15
script = ExtResource("1_e0rqx")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="TaskStateButton" type="Button" parent="."]
unique_name_in_owner = true
texture_filter = 2
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("2_jvgun")
theme_type_variation = &"RedButton"

[node name="LineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/minimum_character_width = 24
placeholder_text = "Enter task..."
script = ExtResource("3_pdtx7")

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("2_jvgun")
theme_type_variation = &"RedButton"
theme_override_constants/icon_max_width = 40
icon = ExtResource("4_3wct2")
icon_alignment = 1

[connection signal="pressed" from="TaskStateButton" to="." method="_on_task_state_button_pressed"]
[connection signal="mouse_entered" from="LineEdit" to="LineEdit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LineEdit" to="LineEdit" method="_on_mouse_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
